assets/css/style.css
* {
	box-sizing: border-box;
}

* {
	margin: 0px; padding: 0px;
}


body {
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	font-size: 18px;
	color: #777777;
	text-align: center;
	background-image: url("../images/background.png");
	background-repeat: repeat-x repeat-y;
	overflow: auto;
}

.bodycontainer {
	width: 100%;
	min-height: 1000px;
	overflow: auto;
}

.wrapper {
	width: 960px;
	height: 75px;
	margin: 0 auto 0 auto;
}

.container-header {
/*	float: left;
*/	width: 100%;
	height: 75px;
	font-family: Georgia, Times, 'Times New Roman', serif;
	background: white;
	border-bottom: solid 1px #cccccc;
}

header {
	float: left;
	width: 200px;
	padding-top: 25px;
	padding-bottom: 15px;
	margin: 0px auto 10px auto;
 	background: #4aaaa5;
 	height: 75px;
 	color: white;
 	font-weight: bold;
	font-family: Georgia, Times, 'Times New Roman', serif;
 }


nav {
	float: right;
	padding-top: 25px;
	padding-bottom: 15px;
	margin: 0px auto 20px auto;
	width: 35%;
	height: 75px;
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	font-size: 10pt;
}

section {
	float: left;
	position: relative;
	padding-left: 30px;
	padding-top: 50px;
	padding-bottom: 50px;
	margin: 50px auto 100px auto;
	background: #ffffff;
	width: 650px;
	min-height: 400px;
	overflow: hidden;
/*	clear: both;
*/	border: solid 1px #dddddd;
	box-shadow: 3px 3px 10px lightgray;
}

aside {
	float: right;
	position: relative;
	padding: 50px 15px 0px 25px;
	margin: 50px 0px;
	background: #ffffff;
	width: 270px;
	height: 150px;
	border: solid 1px #cccccc;
	box-shadow: 3px 3px 10px lightgray;
}

.headline {
	padding: 15px;
	margin: 10px 0px;
	color: #333;
	background: #ebebeb;
	width: 435px;
	font-weight: bold;
	font-size: 19pt;
}

p {
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	color: #777777;
	font-size: 10pt; 
	padding: 15px;
	margin: 0px 15px 5px 0px;
	text-align: left;
	line-height: 2;
}

footer {
	position: fixed;
	bottom: 0px;
	padding: 20px;
	margin: 50px auto 0px auto;
	background: #777777;
	color: white;
	width: 100%;
	height: 50px;
	font-size: 8pt;
	border-top: 2pt solid #4aaaa5;
}

.container {
	width: 960px;
	height: 100%;
	margin: 0 auto 0 auto;
}

a {
	text-decoration: none;
	color: #777777;
}

h2 {
	position: absolute;
	top: 20px;
	left: 30px;
	right: 30px;
	font-family: Georgia, Times, 'Times New Roman', serif;
	background: white;
	color: #4aaaa5;
	text-align: left;
	font-weight: bold;
	border-bottom: solid #dddddd 1px;
}

h4 {
	position: absolute;
	top: 20px;
	left: 30px;
	right: 30px;
	font-family: Georgia, Times, 'Times New Roman', serif;
	font-size: 12pt;
	background: white;
	color: #4aaaa5;
	text-align: left;
	font-weight: bold;
	border-bottom: solid #dddddd 1px;
}

.profile-pic {
	float: left;
	width: 200px;
	height: 200px;
	margin: 20px 20px 10px 0px;
}

/*vertical centering
position: relative;
   top: 50%;
   transform: translateY(-50%);*/

.connect-icons {
	float: left;
	display: inline;
	width: 55px;
	height: 55px;
	margin: 15px 10px;
}

.connect-icons:hover {
	opacity: 0.5;
}

input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
}

label {
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	color: #777777;
	font-size: 12pt;
	text-align: left;
}

textarea {
	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
	color: #777777;
}

input[type=submit] {
    background-color: #4aaaa5;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
 }

 .contact-labels {
 	text-align: left;
 	margin-top: 20px;
 	padding-right: 30px;
 }

.contact-section {
 	height: 550px;
 }

/*.portfolio-section {
 	min-height: 800px;
 	height: auto;
 	margin-bottom: -30px;
 }
*/
.thumbnail-container {
	position: relative;
	float: left;
	width: 285px;
	height: 200px;
	margin: 15px 20px 15px 0px;
}

.thumbnails {
 	position: relative;
 	float: left;
	width: 285px;
	height: 200px;
	margin: 15px 20px 15px 0px;
 }

.thumbnail-header {
	float: left;
	position: absolute;
	bottom: -10px;
	width: 100%;
	padding-top: 10px;
	padding-bottom: 10px;
	margin: 0px auto;
 	background: #4aaaa5;
 	height: auto;
 	color: white;
 	font-weight: normal;
 	font-size: 10pt;
	font-family: Georgia, Times, 'Times New Roman', serif;
	clear: both;
 }

.thumbnail-header:hover {
	background: tomato;
}

img {
	width: 100%
	height: auto;
}

/*.responsive {
	padding: 0 6px;
    float: left;
    width: 49.99999%;
}
*/
/* unvisited link */
a:link {
    color: #777777;
}

/* visited link */
/*a:visited {
    color: green;
}*/

/* mouse over link */
a:hover {
    color: tomato;
}

/* selected link */
a:active {
    color: #4aaaa5;
}

@media screen and (max-width: 980px) {
	
	.wrapper {
/*	width: 960px;
	height: 75px;
	margin: 0 auto 0 auto;*/
	padding-left: 95px;
	padding-right: 40px;
	}

	header {
/*	float: left;*/
	width: 20%;
	/*padding-top: 25px;
	padding-bottom: 15px;*/
	margin: 0px auto 0px auto;
 	/*background: #4aaaa5;*/
 	height: 100%;
 	/*color: white;
 	font-weight: bold;
	font-family: Georgia, Times, 'Times New Roman', serif;*/
 	}

	nav {
	margin: 0px auto 0px auto;
	height: 100%;
/*	background: red;*/
	}

	.container {
	width: 100%;
	padding-left: 100px;
	padding-right: 100px;
	margin: 0px auto;
	}

	section {
	margin: 50px auto 100px auto;
	width: 65%;
	padding-right: 30px;
	}
	
	.profile-pic {
	width: 100%;
	height: 100%;
	padding: 0px 30px 20px 0px;
	}

	aside {
	padding: 50px 5px 0px 25px;
	margin: 50px auto;
	width: 30%;
	height: auto;
	}

	.connect-icons {
	width: 20%;
	height: 20%;
	}

	.thumbnail-container {
	width: 100%;
	height: 100%;
	margin: 15px 20px 15px 0px;
	}

	.thumbnails {
 	width: 100%;
	height: 100%;
	margin: 15px auto 0px auto;
 	}

 	.thumbnail-header {
	/*float: left;
	position: absolute;*/
	bottom: 10px;
/*	width: 100%;
*/	padding: 10px;
/*	padding-bottom: 10px;
*/	/*margin: 0px auto;*/
/* 	background: #4aaaa5;
 	height: auto;
 	color: white;
 	font-weight: normal;
 	font-size: 10pt;
	font-family: Georgia, Times, 'Times New Roman', serif;
	clear: both;*/
 }


@media screen and (max-width: 768px) {
	.wrapper {
	width: 100%;
	padding-left: 95px;
	padding-right: 40px;
	}

	header {
/*	float: left;*/
	width: 30%;
	/*padding-top: 25px;
	padding-bottom: 15px;*/
	margin: 0px auto 0px auto;
 	/*background: #4aaaa5;*/
 	height: 100%;
 	/*color: white;
 	font-weight: bold;
	font-family: Georgia, Times, 'Times New Roman', serif;*/
 	}

	nav {
	margin: 0px auto 0px auto;
	height: 100%;
/*	background: red;*/
	}

	.container {
	width: 100%;
	padding-left: 100px;
	padding-right: 100px;
	margin: 0px auto;
	}

	section {
	margin: 50px auto 15px auto;
	width: 100%;
	padding-right: 30px;
	clear: both;
	}
	
	.profile-pic {
	width: 50%;
	height: auto;
	padding: 0px 30px 20px 0px;
	margin-right: 0px;
	}

	aside {
	display: inline;
	padding: 50px 5px 0px 25px;
	margin: 15px auto 100px auto;
	width: 100%;
	height: auto;
	}

	.connect-icons {
	width: 10%;
	height: auto;
	}

	.thumbnail-container {
	width: 47%;
	height: 100%;
	margin: 15px 12px 0px 0px;
	}

	.thumbnails {
 	width: 100%;
	height: auto;
/*	margin: 15px auto 0px auto;
*//*	float: left;
*/ 	}

 	.thumbnail-header {
	/*float: left;
	position: absolute;*/
	bottom: 10px;
	width: 100%;
/*	width: 100%;
*/	padding: 10px;
/*	padding-bottom: 10px;
*/	/*margin: 0px auto;*/
/* 	background: #4aaaa5;
 	height: auto;
 	color: white;
 	font-weight: normal;
 	font-size: 10pt;
	font-family: Georgia, Times, 'Times New Roman', serif;
	clear: both;*/
 }
}

@media screen and (max-width: 640px) {
	.wrapper {
	width: 100%;
	padding-left: 0px;
	padding-right: 0px;
	}

	header {
/*	float: left;*/
	width: 100%;
	font-size: 24pt;
	/*padding-top: 25px;
	padding-bottom: 15px;*/
	margin: 0px auto 0px auto;
 	/*background: #4aaaa5;*/
 	height: 100%;
 	/*color: white;
 	font-weight: bold;
	font-family: Georgia, Times, 'Times New Roman', serif;*/
 	}

	nav {
	width: 100%;
	margin: 0px auto 0px auto;
	padding-top: 20px;
	height: 65%;
	background: white;
	}

	.container {
	width: 100%;
	padding-left: 100px;
	padding-right: 100px;
	margin: 0px auto;
	}

	section {
	margin: 25px auto 15px auto;
	width: 100%;
	padding-right: 30px;
	clear: both;
	}
	
	.profile-pic {
	width: 100%;
	height: auto;
	padding: 0px 0px 10px 0px;
	margin-right: 0px;
	}

	p {
	padding: 0px;
	margin: 0px 0px 0px 0px;
	text-align: left;
	line-height: 2;
	}

	nav > a {
	padding-left: 50px;
	padding-right: 50px;
	color: #777777;
	}

	.thumbnail-container {
	width: 100%;
	height: 100%;
	margin: 15px 12px 0px 0px;
	}

	.thumbnails {
 	width: 100%;
	height: auto;
/*	margin: 15px auto 0px auto;
*//*	float: left;
*/ 	}

 	.thumbnail-header {
	/*float: left;
	position: absolute;*/
	bottom: 10px;
	width: 100%;
/*	width: 100%;
*/	padding: 10px;
/*	padding-bottom: 10px;
*/	/*margin: 0px auto;*/
/* 	background: #4aaaa5;
 	height: auto;
 	color: white;
 	font-weight: normal;
 	font-size: 10pt;
	font-family: Georgia, Times, 'Times New Roman', serif;
	clear: both;*/
 }
}

